tests/fixtures/positive/coroutines/SynchronizedOnString.kt
package test

class Cache {
    fun mutate() {
        synchronized("global") {
            println("work")
        }
    }
}
